--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
     <title>Dont Leave Example Page</title>
   </head>
   <body>
-    <h1>Wait until three seconds to leave the page!</h1>
+    <h1>Try to leave the page after three seconds!</h1>
     <script src="dont-leave.min.js"></script>
     <script>
       function callback() {
